<resources>
    <string name="app_name">Inviter</string>
    <string name="fb_app_id">1403632433227528</string>

    <string name="please_wait">Please wait...</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_info">Thank you to choose Inviter. Please verify your email id sent to your register email id then click done below to continue.</string>
    <string name="forgot_info">We just need your register email id to send you a link to reset your password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date_hint">Event Start Date</string>
    <string name="end_date_hint">Event End Date</string>
    <string name="event_title_hint">Event Title</string>
    <string name="select_event_start_date">Select Event Start Date</string>
    <string name="select_event_end_date">Select Event End Date</string>
    <string name="event_venue">Event Venue</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_video">From Gallery</string>
    <string name="record_video">Record Video</string>
    <string name="upload_event_video">Upload Event Video</string>
    <string name="network_dialog_title">No Internet Connection</string>
    <string name="network_message">Please check your internet connection!</string>

    <string name="shared_preference_key">UserData</string>
    <string name="user_id">userID</string>
    <string name="app_secret">appSecret</string>
    <string name="app_id">appID</string>
    <string name="access_token">accessToken</string>
    <string name="video_length">videoLength</string>
    <string name="progress_bar_message">Please wait</string>
    <string name="success">success</string>
    <string name="video_error_message">Could not Upload Please Try Again</string>
    <string name="dashboard">Dashboard</string>
    <string name="rsvp_yes">Coming </string>
    <string name="rsvp_no">Not Coming </string>
    <string name="rsvp_may_be">Would Come </string>
    <string name="viewed">Viewed</string>
    <string name="not_viewed">Not View</string>
</resources>
