<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/dateLayout"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="50dp"
        android:text="@string/start_date"
        android:textSize="18dp"
        android:id="@+id/lblStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:hint="@string/start_date_hint"
        android:inputType="date"
        android:id="@+id/txtStartDate"
        android:drawableRight="@drawable/icon_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="50dp"
        android:text="@string/end_date"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/lblEndDate" />

    <EditText
        android:hint="@string/end_date_hint"
        android:inputType="date"
        android:id="@+id/txtEndDate"
        android:visibility="gone"
        android:drawableRight="@drawable/icon_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/btnLocation"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/fragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
    </LinearLayout>

</LinearLayout>