<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/dialog_custom_border"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtEventVenue"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/imgTop"
        android:textSize="18sp"
        android:textColor="@color/bgBlue"
        android:layout_marginTop="5dp"
        android:text="@string/event_venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_below="@+id/txtEventVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" >
        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/btnDone"
        android:background="@drawable/button_border_bg_blue"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/done"
        android:layout_marginLeft="30dp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCancel"
        android:background="@drawable/button_border_bg_blue"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:text="@string/cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>